# tinyOLAP

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  OPTIMIZATIONS.md  README.md  SPEC.md
tinyolap/: CLAUDE.md  Cargo.toml  TODO.md
tinyolap/benches/: README.md  queries.rs
tinyolap/benches/results/: granule_reads_vs_zone_map_scan.txt  n1_vs_serial.txt  simd_hashing_vs_serial.txt  zonemap_vs_serial.txt  zonemap_vs_simd.txt
tinyolap/src/: lib.rs  main.rs
tinyolap/src/catalog/: mod.rs  schema.rs
tinyolap/src/cli/: mod.rs
tinyolap/src/dml/: insert_builder.rs  mod.rs
tinyolap/src/encoding/: delta.rs  rle.rs  string_dictionary.rs  string_plain.rs
tinyolap/src/execution/: builder.rs  executor.rs  expr.rs  filter.rs  full_scan.rs  gather.rs  limit.rs  mod.rs  project.rs  work_source.rs  zone_map_scan.rs
tinyolap/src/frontend/: analyzer.rs  mod.rs  validator.rs
tinyolap/src/logical_plan/: logical_operators.rs  lower.rs  mod.rs  optimizer.rs
tinyolap/src/physical_plan/: lower.rs  mod.rs  optimizer.rs  physical_operators.rs
tinyolap/src/storage/: arrow_mapping.rs  column_reader.rs  mark.rs  part_discovery.rs  string_column_reader.rs  string_column_writer.rs  table_writer.rs
tinyolap/tasks/: Deferred.md  TASK-001.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-012.md
tinyolap/tests/: one_part_aggregates.rs
tinyolap/tests/common/: mod.rs
tinyolap/tests/granule_boundary/: aggregate.rs  filter.rs  group_by.rs  limit.rs  main.rs  projection.rs
tinyolap/tests/multi_part/: aggregate.rs  filter.rs  group_by.rs  limit.rs  main.rs  projection.rs
tinyolap/tests/single_compact_part/: aggregate.rs  filter.rs  group_by.rs  limit.rs  projection.rs
tinyolap/tests/single_part/: aggregates.rs  (+5 more)
(+86 files in other folders)
