[package]
name = "tinyOLAP"
version = "0.1.0"
edition = "2024"

[dependencies]
lz4_flex = "0.11"
libc = "0.2.186"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61.0", features = ["visitor"] }
ahash = "0.8.12"
rand = "0.10.1"
rustyline = "18.0.0"
arrow = "58.3.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "storage_write"
harness = false
path = "benches/storage/write.rs"

[[bench]]
name = "storage_scan"
harness = false
path = "benches/storage/scan.rs"

[[bench]]
name = "encoding_codecs"
harness = false
path = "benches/encoding/codecs.rs"

[[bench]]
name = "query_pipeline"
harness = false
path = "benches/query/pipeline.rs"

[lib]
name = "tinyolap"
path = "src/lib.rs"

[[bench]]
name = "query_zone_map"
harness = false
path = "benches/query/zone_map.rs"
