[package]
name = "tinyOLAP"
version = "0.1.0"
edition = "2024"

[dependencies]
lz4_flex = "0.11"
libc = "0.2.186"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.61.0", features = ["visitor"] }
ahash = "0.8.12"
rand = "0.10.1"
rustyline = "18.0.0"
arrow = { version = "58.3.0", features = ["prettyprint"] }
crossbeam-channel = "0.5.15"
hashbrown = "0.17.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[lib]
name = "tinyolap"
path = "src/lib.rs"

[[bench]]
name = "queries"
harness = false
path = "benches/queries.rs"

[profile.bench]
lto = "thin"
codegen-units = 1
